--- a/style.css
+++ b/style.css
@@ -369,7 +369,7 @@ circle.selected {
   border-radius: 8px;
   padding: 1rem;
   box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-  height: 15vh;
+  height: 10vh;
   overflow-y: auto;
 }
 
@@ -382,12 +382,12 @@ circle.selected {
 
 #language-breakdown dt {
     font-size: 1.0rem;
-    color: color-mix(in srgb, GrayText 90%, Canvas 5%);
-    text-transform: uppercase;
-    grid-row: span 1;
+    grid-row: 2;
 }
 
 #language-breakdown dd {
     font-size: 1rem;
     margin: 0;
+    color: color-mix(in srgb, GrayText 90%, Canvas 5%);
+    text-transform: uppercase;
 }
