Slider with consistent animations

--- a/style.css
+++ b/style.css
@@ -261,9 +261,12 @@ path {
 }
 
 circle {
-    transition: 200ms;
+    transition: all 200ms, r calc(var(--r) * 100ms);
     transform-origin: center;
     transform-box: fill-box;
+    @starting-style {
+        r: 0;
+    }
 }
 
 circle:hover {
